name: YACPong
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: /mnt/vm_shared/YACPong/LICENSE
copyright: Copyright (c) 2010 Korcan Hussein
maintainer: korcan_h@hotmail.com
build-depends: SDL -any, SDL-image -any, SDL-mixer -any,
               SDL-ttf -any, base >=4 && <5, data-accessor-transformers -any,
               fclabels -any, monads-fd -any, random -any, transformers -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Yet Another Pong Clone using SDL.
description: .
category: Game
author: Korcan Hussein
tested-with:
data-files:
data-dir: /mnt/vm_shared/YACPong/data
extra-source-files: /mnt/vm_shared/YACPong/Collision.hs
                    /mnt/vm_shared/YACPong/GameEnv.hs
                    /mnt/vm_shared/YACPong/GameState.hs
                    /mnt/vm_shared/YACPong/Labels.hs /mnt/vm_shared/YACPong/Surface.hs
                    /mnt/vm_shared/YACPong/Vector2.hs
extra-tmp-files:
 
executable: YACPong
main-is: YACPong.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Collision Consts Draw GameEnv GameState Labels Sound
               Surface Timer Vector2
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: